no movie data 보여지는 방식 바꿈

--- a/index.html
+++ b/index.html
@@ -1,48 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" type="image/x-icon" href="asset/favicon.ico" />
+    <script src="js/api.js" type="module"></script>
+    <script src="js/movie.js" type="module"></script>
+    <script src="js/topbtn.js" type="module"></script>
+    <script src="js/darkbtn.js" type="module"></script>
+    <script src="js/sort.js" type="module"></script>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="icon" type="image/x-icon" href="asset/favicon.ico" />
-  <script src="js/api.js" type="module"></script>
-  <script src="js/movie.js" type="module"></script>
-  <script src="js/topbtn.js" type="module"></script>
-  <script src="js/darkbtn.js" type="module"></script>
-  <script src="js/sort.js" type="module"></script>
-
-  <link rel="icon" type="image/x-icon" href="asset/favicon.ico" />
-  <title>BEST MOVIE COLLECTION</title>
-</head>
-
-<body>
-  <header class="title">
-    <div class="title-home">
-      <a href="index.html" id="home-button">
-        <img src="asset/logoRed.png" alt="이미지 없음" style="width: 150px; height: 90%" />
-      </a>
-      <span class="nexthome">CULTUREPLEX</span>
+    <link rel="icon" type="image/x-icon" href="asset/favicon.ico" />
+    <title>BEST MOVIE COLLECTION</title>
+  </head>
+  <body>
+    <header class="title">
+      <div class="title-home">
+        <a href="index.html" id="home-button">
+          <img
+            src="asset/logoRed.png"
+            alt="이미지 없음"
+            style="width: 150px; height: 90%"
+          />
+        </a>
+        <span class="nexthome">CULTUREPLEX</span>
+      </div>
+      <span class="title-text">BEST MOVIE COLLECTION</span>
+      <button id="dark-mode-toggle">🌜️ DARK</button>
+    </header>
+    <div class="search">
+      <div></div>
+      <form class="search-form">
+        <input
+          id="search-value"
+          type="text"
+          placeholder="Search for movies"
+          autofocus
+        />
+        <button class="search-btn">Search</button>
+      </form>
+      <div class="sort-btns">
+        <button class="sort-vote-average">Rating</button>
+        <button class="sort-title">Title</button>
+        <button class="sort-release-date">Date</button>
+      </div>
     </div>
-    <span class="title-text">BEST MOVIE COLLECTION</span>
-    <button id="dark-mode-toggle">🌜️ DARK</button>
-  </header>
-
-  <div class="search">
-    <div></div>
-    <form class="search-form">
-      <input id="search-value" type="text" placeholder="Search for movies" autofocus />
-      <button class="search-btn">Search</button>
-    </form>
-    <div class="sort-btns">
-      <button class="sort-vote-average">Rating</button>
-      <button class="sort-title">Title</button>
-      <button class="sort-release-date">Date</button>
-    </div>
-  </div>
-
-  <div class="movie-cards">
-    <!-- <div class="movie-card">
+    <div class="movie-cards">
+      <!-- <div class="movie-card">
         <div class="movie-card-poster">
           <img src="#" />
         </div>
@@ -57,10 +62,9 @@
           <div class="movie-card-vote-average">평점</div>
         </div> 
       </div> -->
-  </div>
-  <div class="no-movie"></div>
-  <button class="move-top">Top</button>
-  <footer>COPYRIGHT&copy; eGV All rights reserved.</footer>
-</body>
-
+    </div>
+    <div class="no-movie" style="display: none">No movie data.</div>
+    <button class="move-top">Top</button>
+    <footer>COPYRIGHT&copy; eGV All rights reserved.</footer>
+  </body>
 </html>
