no movie data -> no search results 로 변경

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div> 
       </div> -->
     </div>
-    <div class="no-movie" style="display: none">No movie data.</div>
+    <div class="no-movie" style="display: none">No search results.</div>
     <button class="move-top">Top</button>
     <footer>COPYRIGHT&copy; eGV All rights reserved.</footer>
   </body>
